--- a/client/package.json
+++ b/client/package.json
@@ -18,23 +18,28 @@
     "date-fns": "^4.1.0",
     "lucide-react": "^0.479.0",
     "next-themes": "^0.4.6",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^6.22.2",
     "tailwind-merge": "^3.0.2",
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.5.7",
+    "@eslint/config-array": "^0.19.2",
+    "@eslint/object-schema": "^2.1.6",
+    "@tailwindcss/forms": "^0.5.10",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.21",
-    "eslint": "^8.56.0",
+    "eslint": "^9.22.0",
     "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "glob": "^10.3.10",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.0.13",
+    "rimraf": "^4.4.1",
+    "tailwindcss": "^3.4.17",
+    "tailwindcss-animate": "^1.0.7",
     "vite": "^6.2.1"
   }
 }
