--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "schedulist",
   "version": "1.0.0",
   "description": "ABA Therapy Scheduling and Patient Management System",
-  "main": "src/index.js",
+  "main": "schedulist/src/index.js",
   "scripts": {
-    "start": "node src/index.js",
-    "dev": "nodemon src/index.js",
+    "start": "node schedulist/src/index.js",
+    "dev": "nodemon schedulist/src/index.js",
     "db:init": "node src/utils/database.init.js",
     "db:seed": "node src/utils/seed-data.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -25,14 +25,21 @@
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "glob": "^10.3.10",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "lru-cache": "^11.0.2",
+    "p-map": "^7.0.3",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.37.1"
+    "pino-pretty": "^13.0.0",
+    "rimraf": "^4.4.1",
+    "sequelize": "^6.37.1",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "sequelize-cli": "^6.6.2"
   }
 }
