--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "scripts": {
     "start": "node schedulist/src/index.js",
     "dev": "nodemon schedulist/src/index.js",
-    "db:init": "node src/utils/database.init.js",
-    "db:seed": "node src/utils/seed-data.js",
+    "client": "cd client && npm run dev",
+    "server": "node schedulist/src/index.js",
+    "dev:full": "concurrently \"npm run server\" \"npm run client\"",
+    "db:seed": "node schedulist/utils/seed-data.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
@@ -20,6 +22,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "concurrently": "^8.2.2",
     "cors": "^2.8.5",
     "date-fns": "^2.30.0",
     "dotenv": "^16.4.4",
